library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/SF360_Bundle_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit trail for generated Salesforce Headless 360 signed context bundles.</description>
    <label>SF360 Bundle Audit</label>
    <pluralLabel>SF360 Bundle Audits</pluralLabel>
    <nameField>
        <label>Bundle Audit Number</label>
        <type>AutoNumber</type>
        <displayFormat>SF360-AUD-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>