library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Account Id or account hint used to generate the bundle.</description>
    <label>Account Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>