library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/BundleJti__c.field-meta.xml
<CustomField>
    <fullName>BundleJti__c</fullName>
    <description>JWS jti claim for the generated bundle.</description>
    <externalId>true</externalId>
    <label>Bundle JTI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>