library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/ClientHost__c.field-meta.xml
<CustomField>
    <fullName>ClientHost__c</fullName>
    <description>Host name of the client that generated the bundle.</description>
    <label>Client Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>