library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/GeneratedAt__c.field-meta.xml
<CustomField>
    <fullName>GeneratedAt__c</fullName>
    <description>UTC timestamp when the bundle was generated.</description>
    <label>Generated At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>