library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/GeneratedBy__c.field-meta.xml
<CustomField>
    <fullName>GeneratedBy__c</fullName>
    <description>Salesforce user identity that generated the bundle.</description>
    <label>Generated By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>