library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/HipaaMode__c.field-meta.xml
<CustomField>
    <fullName>HipaaMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the bundle was generated under HIPAA synchronous audit mode.</description>
    <label>HIPAA Mode</label>
    <type>Checkbox</type>
</CustomField>