library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/RedactionCounts__c.field-meta.xml
<CustomField>
    <fullName>RedactionCounts__c</fullName>
    <description>JSON object of compliance redaction counts applied to the bundle.</description>
    <label>Redaction Counts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>