library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/SourcesUsed__c.field-meta.xml
<CustomField>
    <fullName>SourcesUsed__c</fullName>
    <description>JSON array of bundle sources used during generation.</description>
    <label>Sources Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>