library/sales-and-crm/salesforce-headless-360/metadata/objects/SF360_Bundle_Audit__c/fields/TraceId__c.field-meta.xml
<CustomField>
    <fullName>TraceId__c</fullName>
    <description>CLI trace identifier associated with bundle generation.</description>
    <label>Trace Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>